# Human-vs-AI-text-Text-Classification-Analysis-

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT_PHASES_TEMP.md  README.md  bert_paper_full_overview.html  errors-.json  experiments_progress_report.html  pyproject.toml  requirements.txt
.claude/: emnlp_review_2026-05-11.md  paper_audit_2026-05-10.md  rerun_plan_2026-05-10.md  settings.json  settings.local.json
.cursor/: HANDOFF.md  PIPELINE_RESULTS_20260426.md  language_review.md
_paper/: gen_figures.py  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
_paper/_guidance/: compass_artifact_wf-e5c786e7-cfe6-4299-ad30-4df35aa9bd14_text_markdown.md  mi_paper_writing_guide.html  patterns_for_prompting.md  raid_dataset_report.md
config/experiments/: ablation.yaml  auc_comparison.yaml  characterize.yaml  confound.yaml  logo.yaml  mlp_probe.yaml  patching.yaml  restricted_probe.yaml  sparse_probe.yaml
configs/: README.md
configs/classifiers/: decision_tree.yaml  linear_svc.yaml  logistic_regression.yaml  random_forest.yaml  sgd.yaml
configs/encoders/: bert.yaml
configs/experiments/: baseline.yaml  decision_tree.yaml  linear_svc.yaml  logistic_regression.yaml  random_forest.yaml  sgd.yaml
configs/tokenizers/: bert.yaml
notebooks/: analysis.ipynb  cluster_testing.ipynb  data_exploration.ipynb  dataset_analysis.ipynb  integrated_gradients.ipynb  neuron_clustering.ipynb  neuron_clustering_viz.ipynb  neurons_analysis.ipynb
notebooks/unused/: kmeans_clustering_reference.py  samples_cluster_analysis.ipynb
raid_analysis/: __init__.py  clustering.py  clustering_pipeline.py  constants.py  data.py  dim_reduction.py  exemplars.py  figures_embedding.py  figures_hierarchy.py  figures_neurons.py  io.py  neurons_pipeline.py  pca_for_clustering.py  pipeline.py  run_analysis.py  summaries.py  traits.py
raid_analysis/clustering/: __init__.py  pipeline.py  strategies.py
raid_analysis/data/: __init__.py  activations.py  discriminative.py  loader.py  loading.py  metadata.py  neuron_stats.py  splits.py
raid_analysis/evaluation/: __init__.py  ablation.py  causal.py  confound.py  patching.py  probe_accuracy.py  probe_factory.py  protocol.py
raid_pipeline/: __init__.py  activation_extractor.py  dataset_tokenizer.py  model_loader.py  raid_loader.py
scripts/: __init__.py  analyze_activations.py  analyze_raid_models.py  backfill_metadata.py  download_raid.py  encode_dataset.py  extract_activations.py  load_dataset.py  preprocess_data.py  run_raid_pipeline.py  run_training.py  tokenize_dataset.py  tokenize_raid.py  train_all_classifiers.py  train_classifier.py
utils/: __init__.py  activation_extractor.py  ai_human_predictor.py  classifier.py  classifier_trainer.py  dataset_encoder.py  dataset_loader.py  dataset_tokenizer.py  encoded_dataset_loader.py  hidden.py  model.py  raid_loader.py  text_dataset_loader.py  text_preprocessing.py  training_pipeline.py
(+42 files in other folders)
