[project]
name = "human-vs-ai-text-analysis"
version = "0.1.0"
description = "Discriminative Neuron Clustering in BERT for AI-Generated Text Detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["nlp", "bert", "interpretability", "ai-detection", "clustering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Deep Learning
    # NOTE: For GPU support, install PyTorch separately with CUDA:
    #   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
    # Otherwise, the default installation below will be CPU-only (10x slower for encoding!)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    
    # NLP / Tokenization
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "scipy>=1.10.0",
    
    # Experiment tracking
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/human-vs-ai-text-analysis"
Repository = "https://github.com/yourusername/human-vs-ai-text-analysis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "utils", "raid_analysis"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["scripts", "utils", "raid_analysis"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

